--- a/styles/all/template/event/overall_header_head_append.html
+++ b/styles/all/template/event/overall_header_head_append.html
@@ -1,3 +1,3 @@
-<!-- IF BOARD_ANNOUNCEMENT -->
+<!-- IF S_BOARD_ANNOUNCEMENT -->
 	<!-- INCLUDECSS @phpbb_boardannouncements/../theme/boardannouncements.css -->
 <!-- ENDIF -->
