Remove built-in title, close button transition fx, and other fixes

--- a/styles/all/template/event/overall_header_content_before.html
+++ b/styles/all/template/event/overall_header_content_before.html
@@ -1,7 +1,7 @@
 <!-- IF S_BOARD_ANNOUNCEMENT -->
 	<div id="phpbb_announcement"<!-- IF BOARD_ANNOUNCEMENT_BGCOLOR --> style="background-color:#{BOARD_ANNOUNCEMENT_BGCOLOR}"<!-- ENDIF -->>
 		<div class="inner">
-			<h3>{L_BOARD_ANNOUNCEMENT}<span class="close" title="{L_BOARD_ANNOUNCEMENT_CLOSE}"><a href="{U_BOARD_ANNOUNCEMENT_CLOSE}"></a></span></h2>
+			<a href="{U_BOARD_ANNOUNCEMENT_CLOSE}"><span class="close" title="{L_BOARD_ANNOUNCEMENT_CLOSE}"></span></a>
 			<p>{BOARD_ANNOUNCEMENT}</p>
 		</div>
 	</div>
