--- a/styles/all/theme/boardannouncements.css
+++ b/styles/all/theme/boardannouncements.css
@@ -1,34 +1,35 @@
+/* style the announcement banner */
 #phpbb_announcement {
 	margin: 10px 0;
 	font-size: 1.1em;
-	padding: 5px 10px;
+	padding: 20px 10px;
 	border-radius: 7px;
 	background-color: #ECD5D8; /* default color */
 }
 
-#phpbb_announcement h3 {
+/* set to relative so absolute can be used for .close */
+#phpbb_announcement .inner {
 	position: relative;
-	font-family: Arial, Helvetica, sans-serif;
-	font-weight: bold;
-	font-size: 1.05em;
-	color: #115098;
-	text-transform: uppercase;
-	border-bottom: 1px solid #CCCCCC;
-	margin-bottom: 3px;
-	padding-bottom: 2px;
-	margin-top: 20px;
 }
 
+/* zero out any text margins */
+#phpbb_announcement .inner p {
+	margin: 0;
+}
+
+/* style the close button */
 #phpbb_announcement .close {
 	position: absolute;
-	right: 0;
+	right: -5px;
 	top: -15px;
 	width: 24px;
 	height: 24px;
 	background: transparent url("images/close.png") no-repeat 0 0;
-	opacity: 0.5;
+	opacity: 0;
+	transition: opacity .5s;
 }
 
-#phpbb_announcement .close:hover {
-	cursor: pointer;
+/* display the close button on mouse-over of the banner */
+#phpbb_announcement:hover .close {
+	opacity: 0.6;
 }
