--- a/styles/all/template/event/overall_header_content_before.html
+++ b/styles/all/template/event/overall_header_content_before.html
@@ -1,7 +1,8 @@
 <!-- IF S_BOARD_ANNOUNCEMENT -->
+	<!-- INCLUDEJS @phpbb_boardannouncements/js/boardannouncements.js -->
 	<div id="phpbb_announcement"<!-- IF BOARD_ANNOUNCEMENT_BGCOLOR --> style="background-color:#{BOARD_ANNOUNCEMENT_BGCOLOR}"<!-- ENDIF -->>
 		<div class="inner">
-			<a href="{U_BOARD_ANNOUNCEMENT_CLOSE}"><span class="close" title="{L_BOARD_ANNOUNCEMENT_CLOSE}"></span></a>
+			<a href="{U_BOARD_ANNOUNCEMENT_CLOSE}" data-ajax="close_announcement" data-overlay="false"><span class="close" title="{L_BOARD_ANNOUNCEMENT_CLOSE}"></span></a>
 			<p>{BOARD_ANNOUNCEMENT}</p>
 		</div>
 	</div>
