--- a/styles/all/theme/boardannouncements.css
+++ b/styles/all/theme/boardannouncements.css
@@ -26,11 +26,15 @@
 	width: 12px;
 	height: 12px;
 	background: transparent url("images/close.png") no-repeat 0 0;
+	opacity: 0.6;
+}
+
+.notouch #phpbb_announcement .close {
 	opacity: 0;
 	transition: opacity .5s;
 }
 
 /* display the close button on mouse-over of the banner */
-#phpbb_announcement:hover .close {
+.notouch #phpbb_announcement:hover .close {
 	opacity: 0.6;
 }
