Use div tags instead of P, for BBcode compatibility

--- a/styles/all/template/event/overall_header_content_before.html
+++ b/styles/all/template/event/overall_header_content_before.html
@@ -3,7 +3,7 @@
 	<div id="phpbb_announcement"<!-- IF BOARD_ANNOUNCEMENT_BGCOLOR --> style="background-color:#{BOARD_ANNOUNCEMENT_BGCOLOR}"<!-- ENDIF -->>
 		<div class="inner">
 			<a href="{U_BOARD_ANNOUNCEMENT_CLOSE}" data-ajax="close_announcement" data-overlay="false" class="close" title="{L_BOARD_ANNOUNCEMENT_CLOSE}"></a>
-			<p>{BOARD_ANNOUNCEMENT}</p>
+			<div>{BOARD_ANNOUNCEMENT}</div>
 		</div>
 	</div>
 <!-- ENDIF -->
