--- a/styles/all/theme/boardannouncements.css
+++ b/styles/all/theme/boardannouncements.css
@@ -13,10 +13,11 @@
 }
 
 /* zero out any text margins and scroll any overflow */
-#phpbb_announcement .inner p {
+#phpbb_announcement .inner div {
 	margin: 0;
 	overflow-x: auto;
 	overflow: hidden;
+	font-size: 1.1em;
 	line-height: 1.5em;
 }
 
