Fix CSS for ul/ol lists inside board announcements

--- a/styles/all/theme/boardannouncements.css
+++ b/styles/all/theme/boardannouncements.css
@@ -48,3 +48,8 @@
 .notouch #phpbb_announcement:hover .close {
 	opacity: 0.6;
 }
+
+/* fix for lists, force them to display inside containing div */
+#phpbb_announcement ul, #phpbb_announcement ol {
+	list-style-position: inside;
+}
