--- a/styles/all/template/event/overall_header_content_before.html
+++ b/styles/all/template/event/overall_header_content_before.html
@@ -1,4 +1,5 @@
 <!-- IF S_BOARD_ANNOUNCEMENT -->
+	<!-- INCLUDECSS @phpbb_boardannouncements/boardannouncements.css -->
 	<!-- INCLUDEJS @phpbb_boardannouncements/js/boardannouncements.js -->
 	<div id="phpbb_announcement"<!-- IF BOARD_ANNOUNCEMENT_BGCOLOR --> style="background-color:#{BOARD_ANNOUNCEMENT_BGCOLOR}"<!-- ENDIF -->>
 		<!-- IF S_BOARD_ANNOUNCEMENT_DISMISS --><a href="{U_BOARD_ANNOUNCEMENT_CLOSE}" data-ajax="close_announcement" data-overlay="false" class="close clearfix" title="{L_BOARD_ANNOUNCEMENT_CLOSE}"></a><!-- ENDIF -->
