--- a/styles/all/theme/boardannouncements.css
+++ b/styles/all/theme/boardannouncements.css
@@ -1,6 +1,6 @@
 /* style the announcement banner */
-#phpbb_announcement {
-	font-size: 1.1em;
+.phpbb_announcement {
+	font-size: 0.85rem;
 	background-color: #ecd5d8; /* default color */
 	border-radius: 7px;
 	margin: 10px 0;
@@ -8,16 +8,16 @@
 }
 
 /* zero out any text margins and scroll any overflow */
-#phpbb_announcement div {
-	font-size: 1.1em;
-	line-height: 1.5em;
+.phpbb_announcement div {
+	font-size: 0.85rem;
+	line-height: 1.25rem;
 	overflow-x: auto;
 	overflow: hidden;
 	margin: 0;
 }
 
 /* make posted images responsive */
-#phpbb_announcement .postimage {
+.phpbb_announcement .postimage {
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
@@ -25,7 +25,7 @@
 }
 
 /* style the close button */
-#phpbb_announcement .close {
+.phpbb_announcement .close {
 	opacity: 0.6;
 	float: right;
 	width: 14px;
@@ -34,30 +34,30 @@
 }
 
 /* reposition close button for right to left languages */
-.rtl #phpbb_announcement .close {
+.rtl .phpbb_announcement .close {
 	float: left;
 	margin: 0 4px 0 0;
 }
 
 /* hide close button on desktops by default */
-.notouch #phpbb_announcement .close {
+.notouch .phpbb_announcement .close {
 	opacity: 0;
 	transition: opacity 0.5s;
 }
 
 /* display the close button on mouse-over of the banner */
-.notouch #phpbb_announcement:hover .close {
+.notouch .phpbb_announcement:hover .close {
 	opacity: 0.6;
 }
 
 /* fix for lists, force them to display inside containing div */
-#phpbb_announcement ul,
-#phpbb_announcement ol {
+.phpbb_announcement ul,
+.phpbb_announcement ol {
 	margin-left: 20px;
 }
 
-.rtl #phpbb_announcement ul,
-.rtl #phpbb_announcement ol {
+.rtl .phpbb_announcement ul,
+.rtl .phpbb_announcement ol {
 	margin-right: 20px;
 	margin-left: 0;
 }
@@ -68,5 +68,5 @@
 	visibility: hidden;
 	clear: both;
 	height: 0;
-	content: '.';
+	content: ".";
 }
