--- a/styles/all/template/event/overall_header_content_before.html
+++ b/styles/all/template/event/overall_header_content_before.html
@@ -4,7 +4,11 @@
 {% endif %}
 {% for announcement in board_announcements %}
 	<div id="phpbb_announcement_{{ announcement.BOARD_ANNOUNCEMENT_ID }}" class="phpbb_announcement"{% if announcement.BOARD_ANNOUNCEMENT_BGCOLOR %} style="background-color:#{{ announcement.BOARD_ANNOUNCEMENT_BGCOLOR }}"{% endif %}>
-		{% if announcement.S_BOARD_ANNOUNCEMENT_DISMISS %}<a href="{{ announcement.U_BOARD_ANNOUNCEMENT_CLOSE }}" data-ajax="close_announcement" data-overlay="false" class="close clearfix" title="{{ lang('BOARD_ANNOUNCEMENT_CLOSE') }}"><i class="icon fa-fw fa-times"></i></a>{% endif %}
+		{% if announcement.S_BOARD_ANNOUNCEMENT_DISMISS %}
+			<a href="{{ announcement.U_BOARD_ANNOUNCEMENT_CLOSE }}" data-ajax="close_announcement" data-overlay="false" class="close" title="{{ lang('BOARD_ANNOUNCEMENT_CLOSE') }}">
+				<i class="icon fa-fw fa-times"></i>
+			</a>
+		{% endif %}
 		<div>{{ announcement.BOARD_ANNOUNCEMENT }}</div>
 	</div>
 {% endfor %}
